--- a/src/templates/base.html.j2
+++ b/src/templates/base.html.j2
@@ -10,8 +10,9 @@
 	</head>
 	<body>
 		<ul>
-			<li><a href="home.html" {% if active_page == "home" %}class="active"{% endif %}>Home</a></li>
-			<li><a href="cv.html" {% if active_page == "cv" %}class="active"{% endif %}>CV</a></li>
+			{% for p in PAGES %}
+			<li><a href="{{ p.name }}.html" {% if p.name == current_page.name %}class="active"{% endif %}>{{ p.title }}</a></li>
+			{% endfor %}
 		</ul>
 		<div>
 			{% block page_content %}{% endblock %}
